--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 	<body>
 		<h1>Mes sommets</h1>
 		 <div id="mapid"></div>
+		 <label for="min-elevation">Altitude minimum</label>
+		 <input type="range" min="0" max="5000" name="min-elevation" id="min-elevation"/>
+         <div id="min-elevation-display"></div>
 		 <script src="sommets.js"></script>
 		<script src="script.js"></script>
 	</body>
